tests/paczka1/fuzzy1/35027884.err
Error in line 1: S936 S783 33,6
Error in line 13: 3JSy5aI S783 77,6
Error in line 25: j7PArTpNBm S936 4,5
Error in line 16: 3JSy5aI S691 57,3
Error in line 27: j7PArTpNBm S691 28,2
Error in line 32: 3ks4DY S691 28,88
Error in line 15: S936 S936 37,3
